# ray-tracing

./: .gitignore  CMakeLists.txt  camera.h  color_utility.hpp  hittable.h  hittable_list.h  main.cpp  ray.h  rtweekend.h  sphere.h
